[package]
name = "bounce"
version = "0.1.0"
authors = ["Thomas Bratt <thomas.bratt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
framework = { path = "../framework" }
rand = "0.7.3"
rand_distr = "0.2.2"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["gfx", "mixer", "ttf"]

